# python

./: .bumpversion.cfg  .github  CHANGELOG.md  Makefile  README.md  cookiecutter.json
.github/: dependabot.yml
.github/workflows/: release.yml  test_code_conda.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Makefile  README.md  appveyor.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
{{cookiecutter.package_name}}/.github/: release-drafter.yml
{{cookiecutter.package_name}}/.github/workflows/: pages.yml  pages2.yml  pythonapp.yml  pythonpublish.yml  release.yml  test_code.yml  test_code_conda.yml
{{cookiecutter.package_name}}/.hooks/: pre-commit
{{cookiecutter.package_name}}/doc/: README.md  conf.py  functions.md  index.rst  make.bat  requirements.txt
{{cookiecutter.package_name}}/docs/: Makefile  _config.yml  api.rst  conf.py  index.rst  markdown.md  rst.rst
{{cookiecutter.package_name}}/tests/: test_sample.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  config.py
